cmake_minimum_required(VERSION 3.21)
project(image_codec CXX)
add_compile_definitions(_USE_MATH_DEFINES NOMINMAX)
set(CMAKE_CXX_STANDARD 17)
add_executable(llrice-c encoder.cpp llrice.hpp bitstream.hpp rlgr.hpp pool.hpp model.hpp polyfill.hpp rice.hpp ring.hpp profiling.hpp image.hpp)
add_executable(llrice-d decoder.cpp llrice.hpp bitstream.hpp rlgr.hpp pool.hpp model.hpp polyfill.hpp rice.hpp ring.hpp profiling.hpp image.hpp)
# Or use the header-only version
# find_package(fmt CONFIG REQUIRED)
# find_package(Stb REQUIRED)
# target_link_libraries(llcompc PRIVATE fmt::fmt-header-only)
# target_link_libraries(llcompd PRIVATE fmt::fmt-header-only)
# target_include_directories(llrice-c PRIVATE ${Stb_INCLUDE_DIR})
# target_include_directories(llrice-d PRIVATE ${Stb_INCLUDE_DIR})
target_compile_options(llrice-c PRIVATE -mcrc32 -msse4.1)
target_compile_options(llrice-d PRIVATE -mcrc32 -msse4.1)
add_executable(test test.cpp)
target_compile_options(test PRIVATE -mcrc32 -msse4.1)